사용자가 방을 나가면 해당 사용자의 카트 아이템도 삭제되도록
+코드 가독성